# gmail-top-sender

./: README.md  gmail-top-senders.py  pyproject.toml
